src/styles/index.css
@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
@import "tailwindcss";

@custom-variant dark (&:where(.dark, .dark *));

@theme {
  --font-inter: "Inter", sans-serif;
}

.blog-pagination .swiper-pagination-bullet {
  background-color: #c7c7c7; /* inactive dot color */
  opacity: 1;
}

.blog-pagination .swiper-pagination-bullet-active {
  background-color: #008060; /* your active color */
}

